tests/ui/issues/issue-13497.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/issue-13497.rs:2:5
   |
LL |     &str
   |     ^ expected named lifetime parameter
   |
   = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
   |
LL |     &'static str
   |      +++++++
help: instead, you are more likely to want to return an owned value
   |
LL -     &str
LL +     String
   |

error[E0515]: cannot return value referencing local variable `rawLines`
  --> $DIR/issue-13497.rs:5:5
   |
LL |     rawLines.iter().map(|l| l.trim()).collect()
   |     --------^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     returns a value referencing data owned by the current function
   |     `rawLines` is borrowed here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0106, E0515.
For more information about an error, try `rustc --explain E0106`.
